<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gs_login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.activities.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/gs_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/check_id_for_description"
                android:gravity="center"
                android:scaleX="0.85"
                android:scaleY="0.85"
                android:src="@drawable/thumbnail_gs_logo_and_text_small"
                android:visibility="invisible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/gs_username_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LoginInput"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/gs_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/gs_passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LoginInput"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/gs_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/gs_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/login"
                android:theme="@style/LoginButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/gs_login_btn_anonymous_exam"
                    style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp"
                    android:text="@string/anonymous_exam"
                    android:textAlignment="viewStart"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.DropDownHint"
                    android:textColor="@color/colorPrimary300"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/gs_login_btn_forgot_password"
                    style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/forgot_pwd"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.DropDownHint"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="12sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/gs_login_progressbar"
                style="@android:style/Widget.Material.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16sp" />

            <ImageView
                android:id="@+id/gs_login_succes_imageview"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:layout_gravity="center"
                android:layout_marginTop="16sp"
                android:contentDescription="@string/check_id_for_description" />

            <TextView
                android:id="@+id/gs_login_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/authenticating_message"
                android:textAppearance="@style/TextAppearance.App.Authentication.Progress" />

        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>