...
    <string name="login">Login</string>
    <string name="authenticating_message">Autenticando&#8230;</string>
    <string name="exams">Exames</string>
    <string name="filter">Filtro</string>
    <string name="notifications">Notificações</string>
    <string name="messages">Mensagens</string>
    <string name="login_success">Registrado</string>
    <string name="login_failed">Erro no login</string>
    <string name="login_manager">Identificado Manager!</string>
    <string name="choose_domain">Escolha o domínio</string>
    <string name="find">Procurar</string>
    <string name="cancel">Cancelar</string>
    <string name="find_new_exam">Localizar exame</string>
...
    <string name="reporting">Profissional responsável</string>
    <string name="referring">Profissional solicitante</string>
    <string name="executionDate">Data do exame</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="identification">Protocolo</string>
    <string name="test_wrong_password">wrongpassword</string>
    <string name="test_multi_role_password">admin</string>
    <string name="test_multi_role_user">doctor</string>
    <string name="test_wrong_user">wronguser</string>
    <string name="test_single_role_user">doctor2</string>
    <string name="test_single_role_password">Admin1</string>
    <string name="gs_role_option_pro">Professional</string>
    <string name="ready_char">R</string>
    <string name="ready">Pronto</string>
    <string name="available">Disponível</string>
    <string name="finished_char">F</string>
    <string name="finished">Pronto</string>
...
