...
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/gs_anonymous_exam_add_exam_id"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_id"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/gs_anonymous_exam_add_access_code"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:hint="@string/accessCode"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <Button
        android:id="@+id/gs_anonymous_exam_btn_find"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/find_new_exam"
        android:textColor="@android:color/white" />
...
